tests/machine/x/hs/group_by_having.error

/workspace/mochi/tests/machine/x/hs/group_by_having.hs:5:1: error:
    Could not find module ‘Data.Aeson’
    Perhaps you meant Data.Version (from base-4.17.2.0)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
5 | import qualified Data.Aeson as Aeson
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Context around line 5:
    3| module Main where
    4| 
    5| import qualified Data.Aeson as Aeson
    6| import qualified Data.ByteString.Lazy.Char8 as BSL
    7| import Data.List (intercalate, isPrefixOf)
